# GooncordRelease

./: Cargo.toml  README.md  build.rs  gooncord_icon.rc
src/: index.html  main.rs  script.js
